# final-project-albert-parlys-pyt4-proa-dts-2022

./: .dccache  LICENSE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/pointer/: final-project.pptx
src/asset/: sessions_okay_to_publish.csv  users_okay_to_publish.csv
src/core/: main.py
src/dev/: dev.ipynb
